--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,59 @@
-# Compiled Lua sources
 luac.out
-
-# luarocks build files
+.env
 *.src.rock
 *.zip
 *.tar.gz
-
-# Object files
 *.o
 *.os
 *.ko
 *.obj
 *.elf
-
-# Precompiled Headers
 *.gch
 *.pch
-
-# Libraries
 *.lib
 *.a
 *.la
 *.lo
 *.def
 *.exp
-
-# Shared objects (inc. Windows DLLs)
 *.dll
 *.so
 *.so.*
 *.dylib
-
-# Executables
 *.exe
 *.out
 *.app
 *.i*86
 *.x86_64
 *.hex
-
+*.log
+*.sql
+*.sqlite
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+*.DS_Store
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+*.idea
+*.iml
+/web-app/WEB-INF
+build/
+*.[oa]
+*.pyc
+.hg
+.svn
+CVS
+*~.nib
+*.swp
+*~
+*(Autosaved).rtfd/
+Backup[ ]of[ ]*.pages/
+Backup[ ]of[ ]*.key/
+Backup[ ]of[ ]*.numbers/
